<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lista_reabastecimento_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_cadastrado"
            android:visibility="invisible"
            />

        <include
            android:id="@+id/lista_reabastecimento_primeiro_acesso"
            layout="@layout/blank_page_home"
            android:visibility="visible"
            />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/lista_float_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_action_adiciona"
            app:backgroundTint="@color/star_command_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="#FFFFFF" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
